alignment fix

--- a/styles/css/customer-1.0.css
+++ b/styles/css/customer-1.0.css
@@ -454,7 +454,7 @@ drb >> dynamically report builder
 .digin-gb-measures {
     overflow: hidden;
     position: relative;
-    min-height: 310px;
+    height: calc(50vh);
     background: #fff;
 }
 
@@ -574,7 +574,7 @@ drb >> dynamically report builder
 
 .digin-gb-menu {
     width: 100%;
-    min-height: 620px;
+    height: calc(100vh);;
     float: right;
     background: #ffffff;
     overflow: hidden;
@@ -600,7 +600,7 @@ drb >> dynamically report builder
 
 .digin-gb-chart-wrap {
     width: 100%;
-    height: 397px;
+    height: calc(55vh);
     background: rgb(250, 250, 250);
     border-left: 3px solid #ECECEC;
 }
@@ -884,7 +884,7 @@ h3 {
 
 .digin-gb-row {
     width: 100%;
-    height: 300px;
+    height: 50vh;
     background: #ffffff;
     border-top: 3px solid #ECECEC;
     border-left: 3px solid #ECECEC;
@@ -1305,11 +1305,20 @@ span {
 
 }
 
+.filed-list-warp > .multi-select {
+    position: relative;
+    padding-left: 15px;
+    display: block;
+    padding-top: 10px;
+
+}
+
 .txt-box-list > div {
     margin: 8px 0px;
 }
 
-.txt-box-list > div > input {
+.txt-box-list > div > input,
+.multi-select .form-control {
     background: transparent !important;
     background-image: none !important;
     border: 2px solid #026689;
